Use URI.toURL()